Organize tasks: add subfolders and move related files

--- a/task2.ipynb
+++ b/task2.ipynb
@@ -219,10 +219,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "22fcd72d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing matrix multiplication for N = 10...\n",
+      "Expected each element: 213.0\n",
+      "All elements correct: True\n",
+      "Computation time: 0.0004 seconds\n",
+      "\n",
+      "Testing matrix multiplication for N = 100...\n",
+      "Expected each element: 2130.0\n",
+      "All elements correct: True\n",
+      "Computation time: 0.0001 seconds\n",
+      "\n",
+      "Testing matrix multiplication for N = 10000...\n",
+      "Expected each element: 213000.0\n",
+      "All elements correct: True\n",
+      "Computation time: 1.1080 seconds\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time\n",
