--- a/task_repeated/task7/task7.ipynb
+++ b/task_repeated/task7/task7.ipynb
@@ -3,106 +3,122 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4474f783",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# daxpy.py\n",
-    "from typing import Sequence, List\n",
-    "def daxpy(a, x, y):\n",
-    "    if len(x) != len(y):\n",
-    "        raise ValueError(\"x and y must have the same length\")\n",
-    "    return [a*xi + yi for xi, yi in zip(x, y)]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "790c28af",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'daxpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrandom\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpytest\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdaxpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m daxpy\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mallclose_vec\u001b[39m(v1, v2, atol=\u001b[32m1e-12\u001b[39m, rtol=\u001b[32m1e-12\u001b[39m):\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(v1) != \u001b[38;5;28mlen\u001b[39m(v2): \n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'daxpy'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_basic_case (__main__.TestDAXPY.test_basic_case) ... ok\n",
+      "test_intentional_fail (__main__.TestDAXPY.test_intentional_fail) ... FAIL\n",
+      "test_length_mismatch (__main__.TestDAXPY.test_length_mismatch) ... ok\n",
+      "test_random_input (__main__.TestDAXPY.test_random_input) ... ok\n",
+      "test_zeros (__main__.TestDAXPY.test_zeros) ... ok\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_intentional_fail (__main__.TestDAXPY.test_intentional_fail)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_3820533/2589015682.py\", line 48, in test_intentional_fail\n",
+      "    np.testing.assert_array_equal(result, expected)\n",
+      "    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/awais/miniconda3/envs/ML/lib/python3.13/site-packages/numpy/_utils/__init__.py\", line 86, in wrapper\n",
+      "    return fun(*args, **kwargs)\n",
+      "  File \"/home/awais/miniconda3/envs/ML/lib/python3.13/site-packages/numpy/testing/_private/utils.py\", line 1057, in assert_array_equal\n",
+      "    assert_array_compare(operator.__eq__, actual, desired, err_msg=err_msg,\n",
+      "    ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                         verbose=verbose, header='Arrays are not equal',\n",
+      "                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                         strict=strict)\n",
+      "                         ^^^^^^^^^^^^^^\n",
+      "  File \"/home/awais/miniconda3/envs/ML/lib/python3.13/site-packages/numpy/testing/_private/utils.py\", line 921, in assert_array_compare\n",
+      "    raise AssertionError(msg)\n",
+      "AssertionError: \n",
+      "Arrays are not equal\n",
+      "\n",
+      "Mismatched elements: 3 / 3 (100%)\n",
+      "Max absolute difference among violations: 994.\n",
+      "Max relative difference among violations: 0.99499499\n",
+      " ACTUAL: array([5., 7., 9.])\n",
+      " DESIRED: array([999, 999, 999])\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 5 tests in 0.005s\n",
+      "\n",
+      "FAILED (failures=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " test_basic_case result: [7.4 7.8 8.2]\n",
+      " test_intentional_fail result: [5. 7. 9.]\n",
+      " test_random_case result: [ 0.53001061 -0.74225836  1.53733935  1.13277947 -2.19322458 -1.03056144\n",
+      "  2.14559451  1.84911679 -1.84697285 -0.32718361]\n",
+      " test_zero_case result: [0. 0. 0. 0. 0.]\n"
      ]
     }
    ],
    "source": [
-    "# test_daxpy.py\n",
-    "import math\n",
-    "import random\n",
-    "import pytest\n",
-    "from daxpy import daxpy\n",
+    "import unittest\n",
+    "import numpy as np\n",
     "\n",
-    "def allclose_vec(v1, v2, atol=1e-12, rtol=1e-12):\n",
-    "    if len(v1) != len(v2): \n",
-    "        return False\n",
-    "    for a, b in zip(v1, v2):\n",
-    "        if math.isfinite(a) and math.isfinite(b):\n",
-    "            if abs(a-b) > atol + rtol*max(abs(a), abs(b)):\n",
-    "                return False\n",
-    "        else:\n",
-    "            # strict handling for non-finite\n",
-    "            if not (math.isnan(a) and math.isnan(b)) and a != b:\n",
-    "                return False\n",
-    "    return True\n",
+    "# Function under test\n",
+    "def daxpy(a, x, y):\n",
+    "    return a * x + y\n",
     "\n",
-    "def test_small_known():\n",
-    "    a = 3.0\n",
-    "    x = [0.1, 0.1, 0.1]\n",
-    "    y = [7.1, 7.1, 7.1]\n",
-    "    assert daxpy(a, x, y) == [7.4, 7.4, 7.4]\n",
+    "# Test suite\n",
+    "class TestDAXPY(unittest.TestCase):\n",
     "\n",
-    "def test_zero_scalar():\n",
-    "    assert daxpy(0.0, [1.0, 2.0], [4.0, 5.0]) == [4.0, 5.0]\n",
+    "    def test_basic_case(self):\n",
+    "        a = 3.0\n",
+    "        x = np.array([0.1, 0.2, 0.3])\n",
+    "        y = np.array([7.1, 7.2, 7.3])\n",
+    "        expected = np.array([7.4, 7.8, 8.2])\n",
+    "        result = daxpy(a, x, y)\n",
+    "        print(\" test_basic_case result:\", result)\n",
+    "        np.testing.assert_allclose(result, expected, rtol=1e-9)\n",
     "\n",
-    "def test_zero_vectors():\n",
-    "    n = 5\n",
-    "    assert daxpy(2.0, [0.0]*n, [0.0]*n) == [0.0]*n\n",
+    "    def test_zeros(self):\n",
+    "        a = 3.0\n",
+    "        x = np.zeros(5)\n",
+    "        y = np.zeros(5)\n",
+    "        expected = np.zeros(5)\n",
+    "        result = daxpy(a, x, y)\n",
+    "        print(\" test_zero_case result:\", result)\n",
+    "        np.testing.assert_array_equal(result, expected)\n",
     "\n",
-    "def test_length_mismatch():\n",
-    "    with pytest.raises(ValueError):\n",
-    "        daxpy(2.0, [1.0, 2.0], [1.0])\n",
+    "    def test_random_input(self):\n",
+    "        np.random.seed(42)\n",
+    "        a = 2.0\n",
+    "        x = np.random.randn(10)\n",
+    "        y = np.random.randn(10)\n",
+    "        expected = a * x + y\n",
+    "        result = daxpy(a, x, y)\n",
+    "        print(\" test_random_case result:\", result)\n",
+    "        np.testing.assert_allclose(result, expected, rtol=1e-9)\n",
     "\n",
-    "def test_random_reproducible():\n",
-    "    rng = random.Random(123)\n",
-    "    n = 1000\n",
-    "    a = 1.7\n",
-    "    x = [rng.uniform(-10, 10) for _ in range(n)]\n",
-    "    y = [rng.uniform(-10, 10) for _ in range(n)]\n",
-    "    ref = [a*xi + yi for xi, yi in zip(x, y)]\n",
-    "    out = daxpy(a, x, y)\n",
-    "    assert allclose_vec(out, ref)\n",
+    "    # --- Extra tests added ---\n",
+    "    def test_intentional_fail(self):\n",
+    "        a = 1.0\n",
+    "        x = np.array([1, 2, 3])\n",
+    "        y = np.array([4, 5, 6])\n",
+    "        expected = np.array([999, 999, 999])  # wrong on purpose\n",
+    "        result = daxpy(a, x, y)\n",
+    "        print(\" test_intentional_fail result:\", result)\n",
+    "        # This should FAIL\n",
+    "        np.testing.assert_array_equal(result, expected)\n",
     "\n",
-    "def test_nan_inf_passthrough():\n",
-    "    a = 2.0\n",
-    "    x = [1.0, math.nan, math.inf, -math.inf]\n",
-    "    y = [3.0, 1.0, 5.0, 6.0]\n",
-    "    out = daxpy(a, x, y)   # [5.0, nan, inf, -inf]\n",
-    "    assert math.isclose(out[0], 5.0)\n",
-    "    assert math.isnan(out[1])\n",
-    "    assert math.isinf(out[2]) and out[2] > 0\n",
-    "    assert math.isinf(out[3]) and out[3] < 0\n",
-    "\n",
-    "# Optional: compare against NumPy if installed\n",
-    "@pytest.mark.optionalhook\n",
-    "def test_numpy_parity():\n",
-    "    try:\n",
-    "        import numpy as np\n",
-    "    except Exception:\n",
-    "        pytest.skip(\"NumPy not installed\")\n",
-    "    a = 3.0\n",
-    "    x = [0.1, -2.0, 5.5, 0.0]\n",
-    "    y = [7.1,  1.0, 2.5, 8.0]\n",
-    "    out = daxpy(a, x, y)\n",
-    "    ref = (a*np.array(x) + np.array(y)).tolist()\n",
-    "    assert allclose_vec(out, ref)\n"
+    "    def test_length_mismatch(self):\n",
+    "        a = 2.0\n",
+    "        x = np.array([1, 2, 3])\n",
+    "        y = np.array([4, 5])  # shorter vector\n",
+    "        with self.assertRaises(ValueError):\n",
+    "            daxpy(a, x, y)  # NumPy will raise ValueError for shape mismatch\n",
+    "if __name__ == \"__main__\":\n",
+    "    unittest.main(argv=[''], exit=False, verbosity=2)\n"
    ]
   }
  ],
