--- a/task_repeated/task5/task5b.ipynb
+++ b/task_repeated/task5/task5b.ipynb
@@ -3,6 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "906d09fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum (NumPy sum): -0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define the vector\n",
+    "vec = np.array([1.0, 1.0e16, -1.0e16, -0.5], dtype=np.float64)\n",
+    "\n",
+    "# Sum using NumPy's built-in function\n",
+    "sum_lib = np.sum(vec)\n",
+    "\n",
+    "print(\"Sum (NumPy sum):\", sum_lib)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "39f98e0b",
    "metadata": {},
    "outputs": [
