FFT missing answer

--- a/task_repeated/task6/task6.ipynb
+++ b/task_repeated/task6/task6.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3aeb4e9d",
    "metadata": {},
    "outputs": [
@@ -19,8 +19,8 @@
      "output_type": "stream",
      "text": [
       "N = 1000\n",
-      "C[0,0] (DC) = 9.985565e+05 + 0.000000e+00i\n",
-      "C[0,1]      = -4.555053e+02 + 1.845020e+02i\n",
+      "C[0,0] (DC) = 9.989248e+05 + 0.000000e+00i\n",
+      "C[0,1]      = 1.270386e+03 + -4.082025e+02i\n",
       "Saved A.npy, C.npy, A.bin, C.bin\n"
      ]
     }
@@ -312,7 +312,7 @@
    "id": "52fcfc2c",
    "metadata": {},
    "source": [
-    "pending"
+    "C[0.0] or R[0.0] is the DC (zero frequency) component of the Fourier Transform and is equal to sum of all elements of TO. For N=1000, it is typically around 10E6, which corresponds to the total average level of  input data. "
    ]
   },
   {
